ATLAS-4450:#2: [UI] Misalignment when the logged in user's name is greater than a certain length, fixed

--- a/dashboardv2/public/css/scss/override.scss
+++ b/dashboardv2/public/css/scss/override.scss
@@ -582,3 +582,7 @@ div.columnmanager-dropdown-container {
         border-radius: 0px !important;
     }
 }
+
+.user-circle {
+    display: inline;
+}
