--- a/dashboardv3/public/css/scss/override.scss
+++ b/dashboardv3/public/css/scss/override.scss
@@ -595,3 +595,7 @@ div.columnmanager-dropdown-container {
         font-size: 15px;
     }
 }
+
+.user-circle {
+    display: inline;
+}
